--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: WakaTime status update
 
 on:
+  workflow_dispatch:
   schedule:
     # Runs at 12 am  '0 0 * * *'  UTC
     - cron: "1 0 * * *"
-
 jobs:
   update-readme:
     name: Update the WakaTime Stat
